--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0"
-    
   },
   "config": {
     "optimize-autoloader": true,
@@ -32,7 +31,7 @@
   
   "autoload": {
     "psr-4": {
-      "SysUtil\\ProcessExec\\": "src/"
+      "SystemUtil\\": "src/"
     }
   },
   "autoload-dev": {
