--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
       - checkout
 
       # Download and cache dependencies
+      - run: sudo apt update && sudo apt install -y --no-install-recommends openssh-server openssh-client
       - run: composer install -n --prefer-dist
 
 
