--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,21 @@ jobs:
       - checkout
 
       # Download and cache dependencies
+      - run: sudo apt update
+
+      ## prepare test for ssh
+      - run: sudo apt install -y --no-install-recommends openssh-server openssh-client
+      - run: sudo /etc/init.d/ssh start
+      ## prepare ssh login
+      - run: ls ~/.ssh && rm -rf ~/.ssh
+      - run: ssh-keygen  -t rsa  -N "" -f ~/.ssh/id_rsa
+      - run: cat /home/circleci/.ssh/id_rsa.pub > /home/circleci/.ssh/authorized_keys
+      - run: touch ~/.ssh/known_hosts && rm ~/.ssh/known_hosts
+      - run: ssh-keyscan -t rsa,dsa localhost  2>/dev/null > ~/.ssh/known_hosts
+      - run: ssh localhost date
+
+      ## prepare phpunit
       - run: composer install -n --prefer-dist
-
-
-      # prepare the database
-      # - run: touch storage/testing.sqlite
-      # - run: php artisan migrate --env=testing --database=sqlite_testing --force
 
       # run tests with phpunit or codecept
       - run: ./vendor/bin/phpunit
