--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,13 @@ jobs:
       - run: sudo apt update && sudo apt install -y --no-install-recommends openssh-server openssh-client
       - run: composer install -n --prefer-dist
 
+      ## prepare test for ssh
+      - run: sudo /etc/init.d/ssh start
+      ## prepare ssh login
+      - run: ssh-keygen  -t rsa  -N "" -f ~/.ssh/id_rsa
+      - run: cat /home/circleci/.ssh/id_rsa.pub > /home/circleci/.ssh/authorized_keys
+      - run: ssh localhost date
 
-      # prepare the database
-      # - run: touch storage/testing.sqlite
-      # - run: php artisan migrate --env=testing --database=sqlite_testing --force
 
       # run tests with phpunit or codecept
       - run: ./vendor/bin/phpunit
