--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
       ## prepare ssh login
       - run: ssh-keygen  -t rsa  -N "" -f ~/.ssh/id_rsa
       - run: cat /home/circleci/.ssh/id_rsa.pub > /home/circleci/.ssh/authorized_keys
+      - run: ssh-keyscan -t rsa,dsa localhost  2>/dev/null > .ssh/known_hosts
       - run: ssh localhost date
 
 
