--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,20 +13,22 @@ jobs:
       - checkout
 
       # Download and cache dependencies
-      - run: sudo apt update && sudo apt install -y --no-install-recommends openssh-server openssh-client
-      - run: composer install -n --prefer-dist
+      - run: sudo apt update
 
       ## prepare test for ssh
+      - run: sudo apt install -y --no-install-recommends openssh-server openssh-client
       - run: sudo /etc/init.d/ssh start
       ## prepare ssh login
       - run: rm -rf ~/.ssh
       - run: ssh-keygen  -t rsa  -N "" -f ~/.ssh/id_rsa
       - run: cat /home/circleci/.ssh/id_rsa.pub > /home/circleci/.ssh/authorized_keys
       - run: rm .ssh/known_hosts
-      - run: touch .ssh/known_hosts
+      - run: ls .ssh/known_hosts && touch .ssh/known_hosts
       - run: ssh-keyscan -t rsa,dsa localhost  2>/dev/null > .ssh/known_hosts
       - run: ssh localhost date
 
+      ## prepare phpunit
+      - run: composer install -n --prefer-dist
 
       # run tests with phpunit or codecept
       - run: ./vendor/bin/phpunit
