--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,29 +8,47 @@ jobs:
     docker:
       # Specify the version you desire here
       - image: circleci/php:7.4.3-cli
+    parameters:
+      sample_php_src: |
+      <?php
+
+      use SystemUtil\Process;
+
+      require_once __DIR__.'/./vendor/autoload.php';
+
+
+      $proc = new Process(['echo', 'HelloWorld']);
+      $proc->run();
 
     steps:
-      - checkout
+      #      - checkout
+      #
+      #      # Download and cache dependencies
+      #      - run: sudo apt update
+      #
+      #      ## prepare test for ssh
+      #      - run: sudo apt install -y --no-install-recommends openssh-server openssh-client
+      #      - run: sudo /etc/init.d/ssh start
+      #      ## prepare ssh login
+      #      - run: ls ~/.ssh && rm -rf ~/.ssh
+      #      - run: ssh-keygen  -t rsa  -N "" -f ~/.ssh/id_rsa
+      #      - run: cat /home/circleci/.ssh/id_rsa.pub > /home/circleci/.ssh/authorized_keys
+      #      - run: touch ~/.ssh/known_hosts && rm ~/.ssh/known_hosts
+      #      - run: ssh-keyscan -t rsa,dsa localhost  2>/dev/null > ~/.ssh/known_hosts
+      #      - run: ssh localhost date
+      #
+      #      ## prepare phpunit
+      #      - run: composer install -n --prefer-dist
+      #
+      #      # run tests with phpunit or codecept
+      #      - run: ./vendor/bin/phpunit
+      #      # - run: ./vendor/bin/codecept build
+      #      # - run: ./vendor/bin/codecept run
 
-      # Download and cache dependencies
-      - run: sudo apt update
-
-      ## prepare test for ssh
-      - run: sudo apt install -y --no-install-recommends openssh-server openssh-client
-      - run: sudo /etc/init.d/ssh start
-      ## prepare ssh login
-      - run: ls ~/.ssh && rm -rf ~/.ssh
-      - run: ssh-keygen  -t rsa  -N "" -f ~/.ssh/id_rsa
-      - run: cat /home/circleci/.ssh/id_rsa.pub > /home/circleci/.ssh/authorized_keys
-      - run: touch ~/.ssh/known_hosts && rm ~/.ssh/known_hosts
-      - run: ssh-keyscan -t rsa,dsa localhost  2>/dev/null > ~/.ssh/known_hosts
-      - run: ssh localhost date
-
-      ## prepare phpunit
-      - run: composer install -n --prefer-dist
-
-      # run tests with phpunit or codecept
-      - run: ./vendor/bin/phpunit
-      # - run: ./vendor/bin/codecept build
-      # - run: ./vendor/bin/codecept run
+      ## run test package is able to install
+      - run: mkdir /tmp/install-test && cd /tmp/install-test
+      - run: composer install takuya/process
+      - run: echo << parameters.sample_php_src >> > run.php
+      - run: php run.php
+        
 
