--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
 
       ## run test package is able to install
       - run: mkdir /tmp/install-test && cd /tmp/install-test
-      - run: composer require takuya/process
+      - run: cd /tmp/install-test && composer require takuya/process
       - run:
           shell: /usr/local/bin/php
           command: |
