--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,6 @@ jobs:
     docker:
       # Specify the version you desire here
       - image: circleci/php:7.4.3-cli
-    parameters:
-      sample_php_src: |
-
     steps:
       - checkout
 
@@ -37,16 +34,20 @@ jobs:
       # - run: ./vendor/bin/codecept run
 
   install:
-    ## run test package is able to install
-    - run: mkdir /tmp/install-test && cd /tmp/install-test
-    - run: cd /tmp/install-test && composer require takuya/process
-    - run:
-        shell: /usr/local/bin/php
-        command: |
-          <?php
-          use SystemUtil\Process;
-          require_once './vendor/autoload.php';
-          $proc = new Process(['echo', 'HelloWorld']);
-          $proc->run();
+    docker:
+      # Specify the version you desire here
+      - image: circleci/php:7.4.3-cli
+    steps:
+      ## run test package is able to install
+      - run: mkdir /tmp/install-test && cd /tmp/install-test
+      - run: cd /tmp/install-test && composer require takuya/process
+      - run:
+          shell: /usr/local/bin/php
+          command: |
+            <?php
+            use SystemUtil\Process;
+            require_once './vendor/autoload.php';
+            $proc = new Process(['echo', 'HelloWorld']);
+            $proc->run();
 
 
