--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,9 @@ jobs:
       - run: composer install -n --prefer-dist
 
       # run tests with phpunit or codecept
-      - run: ./vendor/bin/phpunit
+      - run: ./vendor/bin/phpunit --testsuite Units
+      - run: ./vendor/bin/phpunit --testsuite Feature
+      - run: ./vendor/bin/phpunit --testsuite Sample
       # - run: ./vendor/bin/codecept build
       # - run: ./vendor/bin/codecept run
 
