Change Process Statuts Check to Method. Add Output Changed Callback handling.
CleanUp Code, fix typo, Update Tests
fix typo
Add Test OnOutputChange callback.
cleanup code.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,11 @@ workflows:
   version: 2
   test_and_installationt:
     jobs:
-      - test
+      - test:
+          filters:
+            branches:
+              only:
+                - pre-release
 jobs:
   test:
     docker:
