--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,10 @@
   "autoload-dev": {
     "psr-4": {
       "Tests\\": "tests/"
-    }
+    },
+    "files": [
+      "tests/utils.php"
+    ]
   },
   "repositories": {
     "packagist": {
