--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,32 +23,32 @@ jobs:
           shell: /bin/bash
           command: |
             # Download and cache dependencies.
-            sudo apt update
-            ## prepare test for ssh
-            sudo apt install -y --no-install-recommends openssh-server openssh-client
-            sudo /etc/init.d/ssh start
+            # sudo apt update
+            # ## prepare test for ssh
+            # sudo apt install -y --no-install-recommends openssh-server openssh-client
+            # sudo /etc/init.d/ssh start
             ## prepare ssh login.
-            ls ~/.ssh && rm -rf ~/.ssh
-            ssh-keygen  -t rsa  -N "" -f ~/.ssh/id_rsa
-            cat /home/circleci/.ssh/id_rsa.pub > /home/circleci/.ssh/authorized_keys
-            touch ~/.ssh/known_hosts && rm ~/.ssh/known_hosts
-            ssh-keyscan -t rsa,dsa localhost  2>/dev/null > ~/.ssh/known_hosts
-            ssh localhost date
+            # ls ~/.ssh && rm -rf ~/.ssh
+            # ssh-keygen  -t rsa  -N "" -f ~/.ssh/id_rsa
+            # cat /home/circleci/.ssh/id_rsa.pub > /home/circleci/.ssh/authorized_keys
+            # touch ~/.ssh/known_hosts && rm ~/.ssh/known_hosts
+            # ssh-keyscan -t rsa,dsa localhost  2>/dev/null > ~/.ssh/known_hosts
+            # ssh localhost date
             ## prepare for phpunit
             cd ~/project  && composer install -n --prefer-dist
             ##  prepare for  packagist installation test.
-            mkdir /tmp/install-test
-            cd /tmp/install-test
-            composer require takuya/process
-            ##
-            echo '<?php
-               use SystemUtil\Process;
-               require_once "./vendor/autoload.php";
-               $proc = new Process(["echo", "HelloWorld"]);
-               $proc->run();'  > run.php
-            ## test
-            cd /tmp/install-test &&
-            /usr/local/bin/php run.php &&
+            # mkdir /tmp/install-test
+            # cd /tmp/install-test
+            # composer require takuya/process
+            # ###
+            #  echo '<?php
+            #     use SystemUtil\Process;
+            #     require_once "./vendor/autoload.php";
+            #     $proc = new Process(["echo", "HelloWorld"]);
+            #     $proc->run();'  > run.php
+            #  ## test
+            #  cd /tmp/install-test &&
+            #  /usr/local/bin/php run.php &&
             cd ~/project  &&
             /usr/local/bin/php ./vendor/bin/phpunit --testsuite Units &&
             /usr/local/bin/php ./vendor/bin/phpunit --testsuite Feature &&
