label master branch as circleCI target

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ workflows:
             branches:
               only:
                 - pre-release
+                - master
 jobs:
   test:
     docker:
