--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,8 +78,8 @@ jobs:
       - run:
           shell: /bin/bash
           command: |
-            mkdir /var/www/; cp -r  ~/project /var/www/project;
-            chown www-data:www-data /var/www/project; -R && chmod g+rwx /var/www/project;
+            mkdir -p /var/www/; cp -r  ~/project /var/www/project;
+            chown www-data:www-data /var/www/; -R && chmod g+rwx /var/www/;
             cd /var/www/project;
             sudo -u www-data php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" &&
             sudo -u www-data php composer-setup.php
