add test php-version-test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,18 +7,18 @@ workflows:
   version: 2
   test-php-versions:
     jobs:
-      #      - test-8.0:
-      #          filters:
-      #            branches:
-      #              only:
-      #                - pre-release
-      #                - master
-      #      - test-7.4:
-      #          filters:
-      #            branches:
-      #              only:
-      #                - pre-release
-      #                - master
+      - test-8.0:
+          filters:
+            branches:
+              only:
+                - pre-release
+                - master
+      - test-7.4:
+          filters:
+            branches:
+              only:
+                - pre-release
+                - master
       - test-7.3:
           filters:
             branches:
@@ -87,7 +87,7 @@ jobs:
       - run:
           shell: /bin/bash
           command: |
-            cd /var/www/project;
-            sudo -u www-data php ./vendor/bin/phpunit --testsuite Units ;
-            sudo -u www-data php ./vendor/bin/phpunit --testsuite Feature;
-            sudo -u www-data php ./vendor/bin/phpunit --testsuite SampleCode;
+            cd /var/www/project &&
+            sudo -u www-data php ./vendor/bin/phpunit --testsuite Units &&
+            sudo -u www-data php ./vendor/bin/phpunit --testsuite Feature &&
+            sudo -u www-data php ./vendor/bin/phpunit --testsuite SampleCode &&
