add test php-version-test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,3 +91,4 @@ jobs:
             sudo -u www-data php ./vendor/bin/phpunit --testsuite Units &&
             sudo -u www-data php ./vendor/bin/phpunit --testsuite Feature &&
             sudo -u www-data php ./vendor/bin/phpunit --testsuite SampleCode &&
+            echo end;
